--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ DerivedData/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode
+/.build
+/.swiftpm
